# routes/genres/index.js
@@ -1,4 +1,6 @@
 import { getListMoviesByGenre } from './get.js'
 import { createGenre } from './post.js'
+// import { updateMovieGenreList } from './patch.js'
+import { updateGenre } from './patch.js'
 
-export { createGenre, getListMoviesByGenre }
+export { createGenre, getListMoviesByGenre, updateGenre }
